# grcc

./: CMakeLists.txt  Makefile  README.md  grammar_regex.txt  grammar_regex_ll1.txt  grammar_regex_table.txt  init.sh  table.txt
resources/debug/: grammar_derec.txt  grammar_fact.txt  grammar_reduce.txt  grammar_regex.txt
resources/release/: grammar_regex.txt
src/: constants.h  grammar.cpp  grammar.h  main.cpp  regex.cpp  regex.h
test/: test_grammar.cpp  test_regex.cpp
